--- a/static/stylesheets/partials/_base.sass
+++ b/static/stylesheets/partials/_base.sass
@@ -20,3 +20,9 @@ html, body
   min-height: $footer-height
   margin-top: -$footer-height
   padding: 15px 0px
+
+.nav-item
+  font-size: 18px
+
+textarea.form-control
+  resize: vertical
