--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,cyrillic);
 /*!
  * Bootstrap v3.3.6 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
@@ -1067,7 +1068,7 @@ html {
   -webkit-tap-highlight-color: transparent; }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857;
   color: #333333;
@@ -5292,5 +5293,11 @@ html, body {
   min-height: 150px;
   margin-top: -150px;
   padding: 15px 0px; }
+
+.nav-item {
+  font-size: 18px; }
+
+textarea.form-control {
+  resize: vertical; }
 
 /*# sourceMappingURL=style.css.map */
