--- a/static/stylesheets/style.sass
+++ b/static/stylesheets/style.sass
@@ -1,4 +1,6 @@
-$font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif !default
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,cyrillic)
+
+$font-family-sans-serif: "Open Sans", Helvetica, Arial, sans-serif !default
 $font-family-serif: Georgia, "Times New Roman", Times, serif !default
 
 $border-radius-base: 0px !default
