--- a/templates/templatetags/pagescripts.html
+++ b/templates/templatetags/pagescripts.html
@@ -1,4 +1,10 @@
-
+{% load static %}
+<script type="text/javascript" src="{% static "js/jquery-1.11.3.min.js" %}"></script>
+<script type="text/javascript" src="{% static "js/bootstrap-datepicker.js" %}"></script>
+<script type="text/javascript" src="{% static "js/bootstrap-datepicker.ru.min.js" %}"></script>
+<script type="text/javascript" src="{% static "js/jquery.validate.js" %}"></script>
+<script type="text/javascript" src="{% static "js/additional-methods.js" %}"></script>
+<script type="text/javascript" src="{% static "js/app.js" %}"></script>
 
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
