--- a/templates/templatetags/stylesheets.html
+++ b/templates/templatetags/stylesheets.html
@@ -1,3 +1,4 @@
 {% load static %}
 {#<link href="/media/stylesheets/style.css" rel="stylesheet" type="text/css" />#}
 <link href="{% static "stylesheets/style.css" %}" rel="stylesheet" type="text/css" />
+<link href="{% static "stylesheets/bootstrap-datepicker.css" %}" rel="stylesheet" type="text/css" />
