--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,9 @@
             </div>
         </div>
         <div class="row">
+            {% include "templatetags/messages.html" %}
+        </div>
+        <div class="row">
             <div class="col-xs-12">
                 {% block breaducrumbs %}{% endblock %}
             </div>
