--- a/static/stylesheets/_bootstrap.sass
+++ b/static/stylesheets/_bootstrap.sass
@@ -34,13 +34,13 @@
 @import bootstrap/labels
 @import bootstrap/badges
 @import bootstrap/jumbotron
-@import bootstrap/thumbnails
+//@import bootstrap/thumbnails
 @import bootstrap/alerts
-@import bootstrap/progress-bars
-@import bootstrap/media
+//@import bootstrap/progress-bars
+//@import bootstrap/media
 @import bootstrap/list-group
 @import bootstrap/panels
-@import bootstrap/responsive-embed
+//@import bootstrap/responsive-embed
 @import bootstrap/wells
 @import bootstrap/close
 
