--- a/templates/common/supplies.html
+++ b/templates/common/supplies.html
@@ -41,7 +41,7 @@
                     </div>
 
                     <div class="form-group">
-                        <button type="submit" class="btn-primary btn btn-lg"><i class="glyphicon glyphicon-save-file"></i> СОХРАНИТЬ</button>
+                        <button type="submit" class="btn-primary btn btn-lg">СОХРАНИТЬ</button>
                     </div>
                 </form>
             </div>
