--- a/templates/common/supplies.html
+++ b/templates/common/supplies.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6">
                 <h2>Добавить поставку</h2>
-                <form method="post" id="supply_form">
+                <form method="post" action="{% url "animals:supplies" %}" id="supply_form">
                     {% csrf_token %}
 
                     {% for field in form %}
