--- a/templates/common/reports.html
+++ b/templates/common/reports.html
@@ -15,28 +15,32 @@
     <div class="container">
         <div class="row">
             <div id="report_continer" class="col-xs-12 col-sm-9">
-                {% if report %}
-                    <table class="table table-striped">
-                        <thead>
-                        <tr>
-                            <th>Дата</th>
-                            <th>Событие</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-
-                        {% for item in report %}
+                {% if has_report %}
+                    {% if recomendations %}
+                        <h2>Рекомендации</h2>
+                        <table class="table table-striped">
+                            <thead>
                             <tr>
-                                <td>{{ item.0 }}</td>
-                                <td>{{ item.1 }}</td>
+                                <th>Дата</th>
+                                <th>Необходимо доставить</th>
                             </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                {% else %}
-                    <div class="alert alert-warning" role="alert">В указанный событий нет</div>
-                {% endif %}
+                            </thead>
+                            <tbody>
 
+                            {% for item in recomendations %}
+                                <tr>
+                                    <td>{{ item.date }}</td>
+                                    <td>{{ item.content }}</td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    {% else %}
+                        <div class="alert alert-success" role="alert">
+                            <strong>Рекомендаций нет</strong>
+                            <br>ни одно животное не погибнет</div>
+                    {% endif %}
+                {% endif %}
             </div>
             <div  class="col-xs-12 col-sm-3">
                 {% include "common/widgets/report_form.html" with form=report_form %}
