--- a/templates/common/reports.html
+++ b/templates/common/reports.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div id="report_continer" class="col-xs-12 col-sm-9">
                 {% if has_report %}
-                    {% if recomendations %}
+                    {% if recommendations %}
                         <h2>Рекомендации</h2>
                         <table class="table table-striped">
                             <thead>
@@ -27,7 +27,7 @@
                             </thead>
                             <tbody>
 
-                            {% for item in recomendations %}
+                            {% for item in recommendations %}
                                 <tr>
                                     <td>{{ item.date }}</td>
                                     <td>{{ item.content }}</td>
@@ -39,6 +39,48 @@
                         <div class="alert alert-success" role="alert">
                             <strong>Рекомендаций нет</strong>
                             <br>ни одно животное не погибнет</div>
+                    {% endif %}
+
+                    {% if spawns %}
+                        <h3>Родившиеся животные <i class="text-success glyphicon glyphicon-plus-sign"></i></h3>
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th>Дата</th>
+                                <th>Животные</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+
+                            {% for item in spawns %}
+                                <tr>
+                                    <td>{{ item.date }}</td>
+                                    <td>{{ item.content }}</td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    {% endif %}
+
+                    {% if deaths %}
+                        <h3>Погибшие животные <i class="text-danger glyphicon glyphicon-remove-circle"></i></h3>
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th>Дата</th>
+                                <th>Животные</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+
+                            {% for item in deaths %}
+                                <tr>
+                                    <td>{{ item.date }}</td>
+                                    <td>{{ item.content }}</td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
                     {% endif %}
                 {% endif %}
             </div>
