--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -5129,4 +5129,7 @@ html, body {
 textarea.form-control {
   resize: vertical; }
 
+input[type="checkbox"].form-control {
+  width: 39px; }
+
 /*# sourceMappingURL=style.css.map */
